4. Сортировка номера