@@ -1,13 +1,14 @@
 package ru.job4j.collection;
 
+import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 
 public class LexSort implements Comparator<String> {
     @Override
     public int compare(String left, String right) {
-        List<String> splitLeft = List.of(left.split(". "));
-        List<String> splitRight = List.of(right.split(". "));
+        List<String> splitLeft = Arrays.asList(left.split("\\."));
+        List<String> splitRight = Arrays.asList(right.split("\\."));
         int compareNumberPart = Integer.compare(
                 Integer.parseInt(splitLeft.get(0)),
                 Integer.parseInt(splitRight.get(0))
